fix: set banner:before height to 100vh so it doesn't overlap with below element

--- a/assets/css/responsiveness.css
+++ b/assets/css/responsiveness.css
@@ -22,21 +22,6 @@
     display: flex;
     gap: 2rem;
   }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 160vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
-  }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 650px) {
@@ -57,21 +42,6 @@
   .socialmediaName {
     font-size: 8px;
   }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 160vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
-  }
 }
 
 @media only screen and (min-width: 500px) and (max-width: 600px) {
@@ -91,21 +61,6 @@
 
   .socialmediaName {
     font-size: 0.8rem;
-  }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 160vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
   }
 }
 
@@ -188,21 +143,6 @@
   .imgWrapper i {
     margin-right: 0px;
   }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 190vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
-  }
 }
 
 @media only screen and (min-width: 400px) and (max-width: 440px) {
@@ -211,21 +151,6 @@
   }
   .social_medias {
     gap: 20px;
-  }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 160vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
   }
 }
 
@@ -307,21 +232,6 @@
   .imgWrapper i {
     margin-right: 0px;
   }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 190vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
-  }
 }
 
 @media only screen and (min-width: 250px) and (max-width: 299px) {
@@ -388,21 +298,6 @@
     /* gap: 3rem; */
     width: 100%;
   }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 190vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
-  }
 }
 
 .MenuBar {
@@ -413,21 +308,6 @@
   nav .nav_buttons {
     width: 45%;
   }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 130vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
-  }
 }
 
 @media (max-width: 995px) {
@@ -437,21 +317,6 @@
 
   .MenuBar {
     display: contents;
-  }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 160vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
   }
 }
 
@@ -497,20 +362,5 @@
 @media (max-width: 375px) {
   .logo img {
     width: 130px;
-  }
-  .banner::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 190vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
-      url("../images/child-hands-holding-caring-young-green-plant.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
-    z-index: -1;
   }
 }
