--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@ html {
   height: 100vh;
   display: grid;
   grid-template-rows: 10% 1fr;
+  margin-bottom: 0;
 }
 
 .banner::before {
@@ -151,7 +152,7 @@ html {
   right: 0;
   top: 0;
   bottom: 0;
-  height: 110vh;
+  height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
     url("../images/child-hands-holding-caring-young-green-plant.webp");
   background-size: cover;
